// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlagContent calls submit successfully with category:other 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={true}
  >
    <View>
      <View />
      <View />
      <View>
        <View>
          <Text>
            FLAG THIS 
            POST
          </Text>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Icon
              name="Ex"
            />
          </View>
        </View>
        <RCTScrollView
          data={
            Array [
              Object {
                "id": "inappropriate",
                "title": "Inappropriate Content",
              },
              Object {
                "id": "spam",
                "title": "Spam",
              },
              Object {
                "id": "offensive",
                "title": "Offensive",
              },
              Object {
                "id": "illegal",
                "title": "Illegal",
              },
              Object {
                "id": "other",
                "title": "Other",
              },
            ]
          }
          getItem={[Function]}
          getItemCount={[Function]}
          keyExtractor={[Function]}
          onContentSizeChange={[Function]}
          onLayout={[Function]}
          onMomentumScrollBegin={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onScrollEndDrag={[Function]}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={50}
          stickyHeaderIndices={Array []}
          viewabilityConfigCallbackPairs={Array []}
        >
          <View>
            <View
              onLayout={[Function]}
            >
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
              >
                <Text>
                  Inappropriate Content
                </Text>
              </View>
            </View>
            <View
              onLayout={[Function]}
            >
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
              >
                <Text>
                  Spam
                </Text>
              </View>
            </View>
            <View
              onLayout={[Function]}
            >
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
              >
                <Text>
                  Offensive
                </Text>
              </View>
            </View>
            <View
              onLayout={[Function]}
            >
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
              >
                <Text>
                  Illegal
                </Text>
              </View>
            </View>
            <View
              onLayout={[Function]}
            >
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
              >
                <Text>
                  Other
                </Text>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </Modal>
</View>
`;

exports[`FlagContent changes title based on type 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={true}
  >
    <View>
      <View />
      <View />
      <View>
        <View>
          <Text>
            FLAG THIS 
            POST
          </Text>
          <TouchableOpacity
            onPress={[Function]}
          >
            <Icon
              name="Ex"
            />
          </TouchableOpacity>
        </View>
        <FlatList
          data={
            Array [
              Object {
                "id": "inappropriate",
                "title": "Inappropriate Content",
              },
              Object {
                "id": "spam",
                "title": "Spam",
              },
              Object {
                "id": "offensive",
                "title": "Offensive",
              },
              Object {
                "id": "illegal",
                "title": "Illegal",
              },
              Object {
                "id": "other",
                "title": "Other",
              },
            ]
          }
          keyExtractor={[Function]}
          renderItem={[Function]}
        />
      </View>
    </View>
  </Modal>
</View>
`;

exports[`FlagContent matches the last snapshot 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={true}
  >
    <View>
      <View />
      <View />
      <View>
        <View>
          <Text>
            FLAG THIS 
            CONTENT
          </Text>
          <TouchableOpacity
            onPress={[Function]}
          >
            <Icon
              name="Ex"
            />
          </TouchableOpacity>
        </View>
        <FlatList
          data={
            Array [
              Object {
                "id": "inappropriate",
                "title": "Inappropriate Content",
              },
              Object {
                "id": "spam",
                "title": "Spam",
              },
              Object {
                "id": "offensive",
                "title": "Offensive",
              },
              Object {
                "id": "illegal",
                "title": "Illegal",
              },
              Object {
                "id": "other",
                "title": "Other",
              },
            ]
          }
          keyExtractor={[Function]}
          renderItem={[Function]}
        />
      </View>
    </View>
  </Modal>
</View>
`;
